--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -223,7 +223,7 @@ Page
             <input type="text" value="" style="width:100%;" />
         </td>
         <td style="border:none; width:20px; vertical-align:top; background:none;">
-            <input src="../images/searchicon.gif" onclick="javascript: alert('This would open the search dialog.'); return false" align="top" alt="Search " title="Search " style="border:none;" type="image" />
+            <input src="../images/searchicon.gif" onclick="javascript: alert('This would open the search dialog.'); return false" align="top" alt="Search " title="Search " style="border:none; margin-left:3px;" type="image" />
         </td>
     </tr>
 </table>
