--- a/BFN/businessrules03.html
+++ b/BFN/businessrules03.html
@@ -540,7 +540,7 @@
             <!-- INACTIVE -->
                 <td class="tabinactive1">&nbsp;</td>
                 <td class="tabinactive2">
-                    <button type="submit" name="presentation" value="presentation" alt="Questionnaire Preview" onClick="window.location='namespaceeditor.html'">Namespace Editor</button>
+                    <button type="submit" name="presentation" value="presentation" alt="Questionnaire Preview" onClick="window.location='namespaceeditor.html'">Context Editor</button>
                 </td>
                 <td class="tabinactive3">&nbsp;</td>
             <!-- INACTIVE -->
@@ -584,7 +584,7 @@
     <tr>
         <td class="controlpanel1">&nbsp;</td>
         <td class="controlpanel2">
-            Namespace
+            Context
         </td>
         <td class="controlpanel3">&nbsp;</td>
     </tr>
@@ -608,12 +608,12 @@
     </tr>
 </table>
 
-<!-- TOP PANEL HEAD: Namespace -->
+<!-- TOP PANEL HEAD: Context -->
 <!--<table class="paneltable">
     <tr>
         <td class="toppanelhead1">&nbsp;</td>
         <td class="toppanelhead2">
-            Namespace: My Fabulous Dominion
+            Context: My Fabulous Dominion
         </td>
         <td class="toppanelhead3">
             <img id="control_panelcontent01" src="../images/tinybutton-show.gif" alt="hide" style="width:45px; height:15px; border:none;" />
@@ -644,7 +644,7 @@
     </tr>
 </table>-->
          
-<!-- PANEL CONTENT: Namespace -->
+<!-- PANEL CONTENT: Context -->
 <!--<div id="div_panelcontent01">
     <table class="paneltable">
         <tr>
