--- a/BFN/namespaceeditor.html
+++ b/BFN/namespaceeditor.html
@@ -540,7 +540,7 @@
             <!-- INACTIVE -->
                 <td class="tabactive1">&nbsp;</td>
                 <td class="tabactive2">
-                    <button type="submit" name="presentation" value="presentation" alt="Questionnaire Preview" onClick="window.location='namespaceeditor.html'">Namespace Editor</button>
+                    <button type="submit" name="presentation" value="presentation" alt="Questionnaire Preview" onClick="window.location='namespaceeditor.html'">Context Editor</button>
                 </td>
                 <td class="tabactive3">&nbsp;</td>
             <!-- INACTIVE -->
@@ -579,12 +579,12 @@
 
 <form name="questionnaireform" id="questionnaireform" method="post" action=""> 
 
-<!-- TOP PANEL HEADL: Namespace -->
+<!-- TOP PANEL HEADL: Context -->
 <table class="paneltable">
     <tr>
         <td class="toppanelhead1">&nbsp;</td>
         <td class="toppanelhead2">
-            Namespace
+            Context
         </td>
         <td class="toppanelhead3">
             <img id="control_panelcontent01" src="../images/tinybutton-show.gif" alt="hide" style="width:45px; height:15px; border:none;" />
@@ -615,7 +615,7 @@
     </tr>
 </table>
          
-<!-- PANEL CONTENT: Namespace -->
+<!-- PANEL CONTENT: Context -->
 <div id="div_panelcontent01">
     <table class="paneltable">
         <tr>
