--- a/BFN/businessrules04.html
+++ b/BFN/businessrules04.html
@@ -957,7 +957,7 @@
                                             <div class="firstselectfirsttrue">
                                             
                                             	<div class="arule">
-                                                    Meditate Agenda
+                                                    "Meditate Agenda"
                                                 </div>
                                                 
                                                 <div class="arule">
