git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6896 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-irb-dev/irb-notes2b.html
+++ b/kra-irb-dev/irb-notes2b.html
@@ -190,32 +190,34 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <table align="center" cellpadding="0" cellspacing="0"  summary=""  >
                 <tr>
                   <td><div class="floaters">
-                      <div align="center"><span class="tab-container" style="display: block;">Show:
-                        <select name="select" id="select">
-                          <option value="startOption">All</option>
-                          <option value="A1">Informed Consent Document </option>
-                          <option value="A2">Recruitment Brochure </option>
-                          <option value="PS" selected>Advertisement </option>
-                          <option value="BI">Protocol Narrative </option>
-                          <option value="H1">Investigator Brochure </option>
-                          <option value="H2">Children's Assent Form </option>
-                          <option value="SH">HIPAA Research Authorization Form </option>
-                          <option value="WS">HIPAA Waiver of Research Authorization Form </option>
-                          <option value="GR">Adverse Event </option>
-                          <option value="G2">Other </option>
-                        </select>
-                        Sort By:
-                        <select name="select" id="select">
-                          <option selected>None</option>
-                          <option>Attachment Type</option>
-                          <option>Status</option>
-                          <option>Uploaded By</option>
-                          <option>Upload Date</option>
-                          <option>Contact Name</option>
-                          <option>Contact Email</option>
-                        </select>
-                        </span></div>
-                    </div></td>
+                    <div align="center"><span class="tab-container" style="display: block;">Show:
+                      <select name="select" id="select">
+                        <option value="startOption">All</option>
+                        <option value="A1">Informed Consent Document </option>
+                        <option value="A2">Recruitment Brochure </option>
+                        <option value="PS" selected>Advertisement </option>
+                        <option value="BI">Protocol Narrative </option>
+                        <option value="H1">Investigator Brochure </option>
+                        <option value="H2">Children's Assent Form </option>
+                        <option value="SH">HIPAA Research Authorization Form </option>
+                        <option value="WS">HIPAA Waiver of Research Authorization Form </option>
+                        <option value="GR">Adverse Event </option>
+                        <option value="G2">Other </option>
+                      </select>
+                      Sort By:
+                      <select name="select" id="select">
+                        <option>None</option>
+                        <option>Attachment Type</option>
+                        <option>Status</option>
+                        <option>Uploaded By</option>
+                        <option>Upload Date</option>
+                        <option selected>Contact Name</option>
+                        <option>Contact Email</option>
+                      </select>
+                      <br>
+                      <br>
+                      <img src="../images/tinybutton-update.gif" alt="show/hide this panel" width=48 height=15 border=0 id="F2" ></span></div>
+                  </div></td>
                 </tr>
               </table>
               <table cellpadding=0 cellspacing="0" summary="">
