--- a/kra-irb-dev/irb-notes2c.html
+++ b/kra-irb-dev/irb-notes2c.html
@@ -214,7 +214,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <option selected>Contact Name</option>
                           <option>Contact Email</option>
                         </select>
-                        </span></div>
+                        <br>
+                        <br>
+                        <img src="../images/tinybutton-update.gif" alt="show/hide this panel" width=48 height=15 border=0 id="F2" ></span></div>
                     </div></td>
                 </tr>
               </table>
