--- a/kra-irb-dev/irb-notes2a.html
+++ b/kra-irb-dev/irb-notes2a.html
@@ -196,31 +196,31 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td><div class="floaters">
                     <div align="center"><span class="tab-container" style="display: block;">Show:
                       <select name="select" id="select">
-                    <option value="startOption" selected="selected">All</option>
-                      <option value="A1">Informed Consent Document </option>
-                      <option value="A2">Recruitment Brochure </option>
-
-                      <option value="PS">Advertisement </option>
-                      <option value="BI">Protocol Narrative </option>
-                      <option value="H1">Investigator Brochure </option>
-                      <option value="H2">Children's Assent Form </option>
-                      <option value="SH">HIPAA Research Authorization Form </option>
-                      <option value="WS">HIPAA Waiver of Research Authorization Form </option>
-
-                      <option value="GR">Adverse Event </option>
-                      <option value="G2">Other </option>
+                        <option value="startOption">All</option>
+                        <option value="A1">Informed Consent Document </option>
+                        <option value="A2">Recruitment Brochure </option>
+                        <option value="PS" selected>Advertisement </option>
+                        <option value="BI">Protocol Narrative </option>
+                        <option value="H1">Investigator Brochure </option>
+                        <option value="H2">Children's Assent Form </option>
+                        <option value="SH">HIPAA Research Authorization Form </option>
+                        <option value="WS">HIPAA Waiver of Research Authorization Form </option>
+                        <option value="GR">Adverse Event </option>
+                        <option value="G2">Other </option>
                       </select>
                       Sort By:
                       <select name="select" id="select">
-                        <option selected>None</option>
+                        <option>None</option>
                         <option>Attachment Type</option>
                         <option>Status</option>
                         <option>Uploaded By</option>
                         <option>Upload Date</option>
-                        <option>Contact Name</option>
+                        <option selected>Contact Name</option>
                         <option>Contact Email</option>
                       </select>
-                    </span></div>
+                      <br>
+                      <br>
+                      <img src="../images/tinybutton-update.gif" alt="show/hide this panel" width=48 height=15 border=0 id="F2" ></span></div>
                   </div></td>
                 </tr>
               </table>
