git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6897 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-irb-dev/irb-notes2a.html
+++ b/kra-irb-dev/irb-notes2a.html
@@ -196,10 +196,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td><div class="floaters">
                     <div align="center"><span class="tab-container" style="display: block;">Show:
                       <select name="select" id="select">
-                        <option value="startOption">All</option>
+                        <option value="startOption" selected>All</option>
                         <option value="A1">Informed Consent Document </option>
                         <option value="A2">Recruitment Brochure </option>
-                        <option value="PS" selected>Advertisement </option>
+                        <option value="PS">Advertisement </option>
                         <option value="BI">Protocol Narrative </option>
                         <option value="H1">Investigator Brochure </option>
                         <option value="H2">Children's Assent Form </option>
@@ -210,12 +210,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       </select>
                       Sort By:
                       <select name="select" id="select">
-                        <option>None</option>
+                        <option selected>None</option>
                         <option>Attachment Type</option>
                         <option>Status</option>
                         <option>Uploaded By</option>
                         <option>Upload Date</option>
-                        <option selected>Contact Name</option>
+                        <option>Contact Name</option>
                         <option>Contact Email</option>
                       </select>
                       <br>
