--- a/kra-irb-dev/irb-notes2b.html
+++ b/kra-irb-dev/irb-notes2b.html
@@ -206,12 +206,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       </select>
                       Sort By:
                       <select name="select" id="select">
-                        <option>None</option>
+                        <option selected>None</option>
                         <option>Attachment Type</option>
                         <option>Status</option>
                         <option>Uploaded By</option>
                         <option>Upload Date</option>
-                        <option selected>Contact Name</option>
+                        <option>Contact Name</option>
                         <option>Contact Email</option>
                       </select>
                       <br>
