--- a/kra-iacuc-bfn/iacuc-altsearch.html
+++ b/kra-iacuc-bfn/iacuc-altsearch.html
@@ -111,12 +111,12 @@
                     <button type="submit" alt="General" onClick="alert('This would navigate to a page similar to in IRB')">Funding Source</button>
                 </td>
                 <td class="tabinactive3">&nbsp;</td>
-            <!-- ACTIVE -->
-                <td class="tabactive1">&nbsp;</td>
-                <td class="tabactive2">
+            <!-- INAACTIVE -->
+                <td class="tabinactive1">&nbsp;</td>
+                <td class="tabinactive2">
                     <button type="submit" name="editor" value="editor" alt="Business Rules" onClick="window.location='iacuc-species.html'">Species/Groups</button>
                 </td>
-                <td class="tabactive3">&nbsp;</td>
+                <td class="tabinactive3">&nbsp;</td>
             <!-- INACTIVE -->
                 <td class="tabinactive1">&nbsp;</td>
                 <td class="tabinactive2">
@@ -130,11 +130,11 @@
                 </td>
                 <td class="tabinactive3">&nbsp;</td>
             <!-- INACTIVE -->
-                <td class="tabinactive1">&nbsp;</td>
-                <td class="tabinactive2">
+                <td class="tabactive1">&nbsp;</td>
+                <td class="tabactive2">
                     <button type="submit" name="manager" value="manager" alt="Question Manager" onClick="window.location='iacuc-altsearch.html'">Alternate Search</button>
                 </td>
-                <td class="tabinactive3">&nbsp;</td>
+                <td class="tabactive3">&nbsp;</td>
             <!-- INACTIVE -->
                 <td class="tabinactive1">&nbsp;</td>
                 <td class="tabinactive2">
@@ -179,22 +179,22 @@
                 <td class="tabinactive4"></td>
                 <td class="tabinactive5"></td>
                 <td class="tabinactive6"></td>
+            <!-- INACTIVE -->
+                <td class="tabinactive4"></td>
+                <td class="tabinactive5"></td>
+                <td class="tabinactive6"></td>
+            <!-- INACTIVE -->
+                <td class="tabinactive4"></td>
+                <td class="tabinactive5"></td>
+                <td class="tabinactive6"></td>
+            <!-- INACTIVE -->
+                <td class="tabinactive4"></td>
+                <td class="tabinactive5"></td>
+                <td class="tabinactive6"></td>
             <!-- ACTIVE -->
                 <td class="tabactive4"></td>
                 <td class="tabactive5"></td>
                 <td class="tabactive6"></td>
-            <!-- INACTIVE -->
-                <td class="tabinactive4"></td>
-                <td class="tabinactive5"></td>
-                <td class="tabinactive6"></td>
-            <!-- INACTIVE -->
-                <td class="tabinactive4"></td>
-                <td class="tabinactive5"></td>
-                <td class="tabinactive6"></td>
-            <!-- INACTIVE -->
-                <td class="tabinactive4"></td>
-                <td class="tabinactive5"></td>
-                <td class="tabinactive6"></td>
             <!-- INACTIVE -->
                 <td class="tabinactive4"></td>
                 <td class="tabinactive5"></td>
