--- a/kra-coi-bfn/coi-financialentities.html
+++ b/kra-coi-bfn/coi-financialentities.html
@@ -306,7 +306,7 @@
                                 1
                             </td>
                             <td class="content_white">
-                                <img src="../images/exclamation.png" alt="attention" style="width:16px; height:16px; vertical-align:middle;">
+                                <!--<img src="../images/exclamation.png" alt="attention" style="width:16px; height:16px; vertical-align:middle;">-->
                                 Barakat Pharmaceutical Industries
                             </td>
                             <td class="content_white">
@@ -327,7 +327,7 @@
 									});
 								</script>
                                 <div style="display: none;">
-                                    <div id="FB_div_summaryview01" style="overflow:auto;">
+                                    <div id="FB_div_summaryview01" style="overflow:auto; border-left: solid #939393 1px;">
                                         <table class="content_table">  
                                             <tr>
                                                 <th class="elementhead_left" colspan="3">
@@ -339,19 +339,13 @@
                                                 </th>
                                             </tr>
                                             <tr>
-                                                <td class="content_grey" style="vertical-align:top;">
-                                                    History: 
-                                                </td>
-                                                <td class="content_white">
-                                                    Record 3 of 3
-                                                    <input name="x" src="../images/controlarrows_previous.png" onclick="javascript: alert('This would decrement the record being viewed and compared.'); return false" style="border:none; vertical-align:middle;" alt="Previous" type="image" />
-                                                    <input name="x" src="../images/controlarrows_nextoff.png" onclick="javascript: alert('This would increment the record being viewed and compared.'); return false" style="border:none; vertical-align:middle;" alt="Previous" type="image" />
-                                                </td>
-                                                <td class="content_grey" style="vertical-align:top;">
-                                                    Updated: 
-                                                </td>
-                                                <td class="content_white">
-                                                    07/29/2009 03:59 PM crc 
+                                                <td class="content_gradient" colspan="4">
+                                                    07/29/2009 03:59 PM crc
+                                                	<span style="float:right;">
+                                                    	Version 3 of 3
+                                                        <input name="x" src="../images/controlarrows_previous.png" onclick="javascript: alert('This would decrement the record being viewed and compared.'); return false" style="border:none; vertical-align:middle;" alt="Previous" type="image" />
+                                                    	<input name="x" src="../images/controlarrows_nextoff.png" onclick="javascript: alert('This would increment the record being viewed and compared.'); return false" style="border:none; vertical-align:middle;" alt="Previous" type="image" />
+                                                    </span>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -483,7 +477,7 @@
                                                                 );	
                                                         });
                                                     </script>
-                                                    Compare to Previous Record (08/15/2005 08:03 AM crc)
+                                                    Compare to Previous Version (08/15/2005 08:03 AM crc)
                                                 </td>
                                             </tr>
                                         </table>
@@ -498,17 +492,11 @@
                                                 </th>
                                             </tr>
                                             <tr>
-                                                <td class="content_grey" style="vertical-align:top;">
-                                                    History: 
-                                                </td>
-                                                <td class="content_white">
-                                                    Record 2 of 3 
-                                                </td>
-                                                <td class="content_grey" style="vertical-align:top;">
-                                                    Updated: 
-                                                </td>
-                                                <td class="content_white" style="width:160px;">
+                                                <td class="content_gradient" colspan="4">
                                                     08/15/2005 08:03 AM crc
+                                                	<span style="float:right;">
+                                                    	Version 2 of 3
+                                                    </span>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -623,8 +611,8 @@
                                                 </th>
                                             </tr>
                                             <tr>
-                                                <th class="content_grey">
-                                                    &nbsp; 
+                                                <th class="content_grey">&nbsp;
+                                                     
                                                 </th>
                                                 <th class="content_grey" style="text-align:center;">
                                                     Updated 
