--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -246,7 +246,7 @@ Page
 <input type="radio" class="nobord" name="CustomData" value="0" checked="checked" />
 
 <!-- Input -->
-<input type="text" style="width:150px;" value="Ipsum" />
+<input type="text" style="width:99%;" value="Ipsum" />
 
 <!-- Select -->    
 <select name="CustomData" id="CustomData">
