--- a/kra-coi-bfn/coi-financialentity.html
+++ b/kra-coi-bfn/coi-financialentity.html
@@ -1695,7 +1695,7 @@
     
 <!-- GLOBAL DOCUMENT CONTROLS -->
 <div class="globaldocumentcontrols">
-    <a href="coi-financialentities.html"><img src="../images/buttonsmall_return.gif" alt="return" width="53" height="18" hspace="5" border="0" onclick="alert('This would check validation before navigating to the list view of Financial Entities.')" /></a>
+    <img src="../images/buttonsmall_return.gif" alt="return" width="53" height="18" hspace="5" border="0" onclick="alert('This would check validation before navigating to the originating page.')" />
     <a href="#"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0" /></a>
     <a href="#"><img src="../images/buttonsmall_refresh.gif" alt="refresh" width="68" height="18" hspace="5" border="0" /></a>
     <a href="#"><img src="../images/buttonsmall_close.gif" alt="close" width="48" height="18" hspace="5" border="0" /></a>
