--- a/kra-iacuc-bfn/iacuc-species.html
+++ b/kra-iacuc-bfn/iacuc-species.html
@@ -301,7 +301,7 @@
                             <td class="content_grey" style="text-align:center; width:80px;">
                                 Exceptions*
                             </td>
-                            <td class="content_grey" style="text-align:center; width:100px;">
+                            <td class="content_grey" style="text-align:center; width:100px; min-width:100px;">
                                 Action
                             </td>
                         </tr>
@@ -1277,16 +1277,16 @@
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td class="content_greyalt" style="text-align:center;">
+                                            <td class="content_grey" style="text-align:center;">
                                                 1
                                             </td>
-                                            <td class="content_whitealt">
+                                            <td class="content_white">
                                                 exception 1
                                             </td>
-                                            <td class="content_whitealt">
+                                            <td class="content_white">
                                                 Lundium penatibus arcu lorem.  Porttitor porta lorem egestas dictumst nec abus.
                                             </td>
-                                            <td class="content_whitealt" style="text-align:center;">
+                                            <td class="content_white" style="text-align:center;">
                                                 
                                                 <!-- FancyBox -->
                                                 <a id="FB_control_editspecies06" href="#FB_div_editspecies06" title="Edit Exception"><img id="edit03" src="../images/tinybutton-edit1.gif" style="border:none; cursor:pointer;" alt="edit" title="Edit" type="image" /></a>
@@ -1352,16 +1352,16 @@
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td class="content_greyalt" style="text-align:center; border-bottom:1px solid #888;">
+                                            <td class="content_grey" style="text-align:center; border-bottom:1px solid #888;">
                                                 2
                                             </td>
-                                            <td class="content_whitealt" style="border-bottom:1px solid #888;">
+                                            <td class="content_white" style="border-bottom:1px solid #888;">
                                                 exception 2
                                             </td>
-                                            <td class="content_whitealt" style="border-bottom:1px solid #888;">
+                                            <td class="content_white" style="border-bottom:1px solid #888;">
                                                 Diam et pulvinar dolor et nec.  Pulvinar dolor et.
                                             </td>
-                                            <td class="content_whitealt" style="text-align:center; border-bottom:1px solid #888;">
+                                            <td class="content_white" style="text-align:center; border-bottom:1px solid #888;">
                                                 
                                                 <!-- FancyBox -->
                                                 <a id="FB_control_editspecies09" href="#FB_div_editspecies09" title="Edit Exception"><img id="edit03" src="../images/tinybutton-edit1.gif" style="border:none; cursor:pointer;" alt="edit" title="Edit" type="image" /></a>
