COI Annual and Event Disclosure(s) updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6922 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coi-bfn/coi-annualdisclosures.html
+++ b/kra-coi-bfn/coi-annualdisclosures.html
@@ -327,7 +327,7 @@
             <div class="div_award">
                 <div class="h2-container">
                     <span class="subhead-left">
-                        <h2>Project Alpha (Complete)</h2></span><span class="subhead-right"><span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span>
+                        <h2>Project Alpha <span style="font-size:9px;">(Financial Entity Review Complete)</span></h2></span><span class="subhead-right"><span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span>
                     </span>
                 </div>
                 <table cellspacing="0">
@@ -861,7 +861,7 @@
             <div class="div_proposal">
                 <div class="h2-container">
                     <span class="subhead-left">
-                        <h2>Project Alpha (Complete)</h2></span><span class="subhead-right"><span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span>
+                        <h2>Project Alpha</h2></span><span class="subhead-right"><span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span>
                     </span>
                 </div>
                 <table cellspacing="0">
@@ -909,7 +909,7 @@
                             
                         });
                     </script>
-                    Financial Entities
+                    Financial Entities <span style="font-size:9px;">(Review Complete)</span>
                 </div>
                 <table class="content_table" id="table_finent05" style="display:none;">  
                     <tr>
@@ -1059,7 +1059,7 @@
             <div class="div_proposal">
                 <div class="h2-container">
                     <span class="subhead-left">
-                        <h2><img src="../images/exclamation.png" style="border:none; width:16px; height:16px; vertical-align:middle;" label="Incomplete Project" /> Project Beta (Incomplete)</h2></span><span class="subhead-right"><span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span>
+                        <h2>Project Beta</h2></span><span class="subhead-right"><span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span>
                     </span>
                 </div>
                 <table cellspacing="0">
@@ -1107,7 +1107,8 @@
                             
                         });
                     </script>
-                    Financial Entities
+                    <img src="../images/exclamation.png" style="border:none; width:16px; height:16px; vertical-align:middle;" label="Incomplete Project" /> 
+                    Financial Entities <span style="font-size:9px;">(Review Incomplete)</span>
                 </div>
                 <table class="content_table" id="table_finent03" style="display:none;">  
                     <tr>
